--- a/src/App.css
+++ b/src/App.css
@@ -61,8 +61,8 @@ body{
   transform: scale(2.5)
 }
 .bubbles span.seven{
-  animation-delay: 3
-  transform: scale(1.5)
+  animation-delay: 3;
+  transform : scale(1.5)
 }
 .bubbles span:before{
   content: '';
